[package]
name = "trading_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.9"
dotenv = "0.15"
thiserror = "1.0"
serde_with = { version = "3.0", features = ["macros"] }